# oida_backend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  PRODUCTION_READINESS.md  README.md  docker-compose.cluster.yml  docker-compose.yml  go.mod  go.sum  opencode.json  pyproject.toml  sources.md  sources2.md  worker-parse
.serena/: project.yml
.sisyphus/: boulder.json
cmd/: AGENTS.md
docker/: app.Dockerfile  go.Dockerfile  vesselfinder.Dockerfile
docs/: api-reference.md  capability-matrix.json  capability-matrix.md  comprehensive_delivery_plan.md  schema-standards.md
infra/: AGENTS.md
scripts/: verify.sh
seed/: api_clients.json  data_classes.json  query_dialects.json  saved_queries.json  source_catalog.json  source_catalog_compiled.json  source_registry.json  vector_spaces.json
specifications/: README.md  api-and-auth.md  clickhouse-schema-contract.md  data-lifecycle.md  domain-packs-and-metrics.md  extension-playbooks.md  operations-and-deployment.md  orchestration-jobs.md  parsers-and-promotion.md  source-governance-and-catalog.md  system-architecture.md
test/: AGENTS.md
tests/: conftest.py  test_api_main_import_isolation.py  test_api_routes.py  test_artifact_manifest_contract.py  test_artifact_manifest_utils.py  test_audit_cursor_utils.py  test_audit_event_cursor_utils.py  test_audit_feature_contract.py  test_audit_operational_contract.py  test_audit_trail.py  test_audit_trail_contract.py  test_baseline_health.py  test_catalog_contract.py  test_catalog_utils.py  test_celery_app_import_isolation.py  test_clickhouse_service.py  (+81 more)
(+560 files in other folders)
