[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medallion-backend"
version = "0.3.0"
description = "Containerized medallion architecture backend with ingest, ELT, and serving."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.34",
  "celery[redis]>=5.4",
  "clickhouse-connect>=0.8",
  "dagster>=1.8",
  "dagster-docker>=0.24",
  "dagster-postgres>=0.24",
  "dagster-webserver>=1.8",
  "duckdb>=1.1",
  "fastapi>=0.115",
  "flower>=2.0",
  "openpyxl>=3.1",
  "orjson>=3.10",
  "pandas>=2.2",
  "psycopg[binary]>=3.2",
  "pyarrow>=18.0",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "python-multipart>=0.0.9",
  "redis>=5.0",
  "requests>=2.32",
  "sqlalchemy>=2.0",
  "tenacity>=9.0",
  "uvicorn[standard]>=0.30"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "httpx>=0.28"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

